fixed overflow

--- a/less/style.less
+++ b/less/style.less
@@ -95,15 +95,16 @@ div.canvas {
     padding-bottom: 50px;
 }
 
-div.adr-row {
-    overflow-x: auto;
-    overflow-y: hidden;
-    white-space: nowrap;
+.adr-row {
+    
+ 
     margin: 0 auto;
     width: 100;
     padding: 20px 80px;
     &.notes-container {
         background: @adr-light-blue;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
     &:before, &:after {
         display: table;
